--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "json-collator",
   "version": "0.0.0",
+  "engines": {
+      "node": "6.9.1"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
